Building out a hashmap based structure for returning element correlated property queries

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.3.17", features = ["derive"] }
+mendeleev = "0.8.0"
+num = "0.4.1"
+uom = "0.35.0"
