--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.3.17", features = ["derive"] }
+comfy-table = "7.1.0"
 mendeleev = "0.8.0"
 num = "0.4.1"
-uom = "0.35.0"
+serde = {version = "1.0.197", features = ["derive"]}
+serde_json = "1.0.114"
